refactor(distrib): Unified start script (#6052)
* Now kura starts by default in debug mode

* Unified start scripts

* added missing doc

* revemod deprecated options